--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
+aiokafka==0.10.0
 alembic==1.12.0
 annotated-types==0.6.0
 anyio==3.7.1
+async-timeout==4.0.3
 asyncpg==0.28.0
 bcrypt==4.0.1
 cffi==1.16.0
@@ -16,6 +18,7 @@ h11==0.14.0
 idna==3.4
 Mako==1.2.4
 MarkupSafe==2.1.3
+packaging==24.0
 passlib==1.7.4
 pyasn1==0.5.0
 pycparser==2.21
