--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,6 @@
 version: '3.9'
 
 services:
-  app:
-    build:
-      context: .
-    container_name: auth-service
-    env_file:
-      - .env
-    ports:
-      - 8000:8000
-    command: sh -c "uvicorn src.main:app --host=0.0.0.0 --port=8000"
-    depends_on:
-      - db
-
-  migrations:
-    build: .
-    container_name: migrations-tool
-    command: sh -c "alembic upgrade head"
-    depends_on:
-      - db
-    env_file:
-      - .env
-    profiles:
-      - tools
-
   db:
     container_name: users-db
     image: postgres:15
@@ -33,7 +10,36 @@ services:
       - .env
     ports:
       - 5433:5432
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 2s
+      timeout: 10s
+      retries: 5
 
+  migrations:
+    build: .
+    container_name: migrations-tool
+    command: sh -c "alembic upgrade head"
+    depends_on:
+      db:
+        condition: service_healthy
+    env_file:
+      - .env
+
+  app:
+    build:
+      context: .
+    container_name: auth-service
+    env_file:
+      - .env
+    ports:
+      - 8001:8001
+    command: sh -c "uvicorn src.main:app --host=0.0.0.0 --port=8001"
+    depends_on:
+      db:
+        condition: service_healthy
+      migrations:
+        condition: service_completed_successfully
 
 volumes:
   pgdbdata:
