--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.9'
-
 services:
   db:
     container_name: users-db
@@ -18,7 +16,7 @@ services:
 
   migrations:
     build: .
-    container_name: migrations-tool
+    container_name: auth-service-migrations-tool
     command: sh -c "alembic upgrade head"
     depends_on:
       db:
@@ -33,8 +31,8 @@ services:
     env_file:
       - .env
     ports:
-      - 8001:8001
-    command: sh -c "uvicorn src.main:app --host=0.0.0.0 --port=8001"
+      - 8001:8080
+    command: sh -c "uvicorn src.main:app --host=0.0.0.0 --port=8080"
     depends_on:
       db:
         condition: service_healthy
